ags (0.9.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_devout_adjust_delay_and_attack() and related
	* improved AgsPulsePort to omit polling thread twice
	* fixed missing volatile of AgsPollingThread's flags
	* fixed destroy machine crash during playback

ags (0.9.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added mutices to AgsJackServer and AgsPulseServer
	* fixed memory leaks of mutices in AgsPulseClient, AgsJackClient, AgsPulsePort and AgsJackPort
	* fixed wrong parent class of dispose in ags_pulse_server.c and ags_jack_server.c
	* fixed data-race during playback termination in ags_pulse_devout_port_free()
	* fixed ags_application_context initialization if NULL (note might be reverted, soon)

ags (0.9.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing initial configuration of pulseaudio
	* improved throughput of pulseaudio by using maxlength of stream -1
	* improved clear buffer task to let ring-buffer being valid longer

ags (0.9.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_pulse_server.c, ags_pulse_client.c and ags_pulse_port.c
	* implemented ags_pulse_devout.c
	* refactored AgsSoundcardEditor to work with pulseaudio, too
	* fixed memory leak related to mutex and its attributes for AgsDevout, AgsMidiin, AgsJackDevout and AgsJackMidiin
	* fixed missing paranthesis to check flags in ags_devout.c, ags_midiin.c, ags_jack_devout.c and ags_clear_buffer.c

ags (0.9.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_input_apply_synth() and ags_input_apply_synth_extended()
	* fixed ags_syncsynth_reset_loop() to use attack to calculate loop upper
	* fixed ags_recall_container_find() and its flags to enumerate correctly
	* fixed ags_thread_pool_creation_thread() to check parent for NULL
	* enabled unit-test ags_input_test.c because not tested
	* new unit-test ags_midiin_test.c
	* new unit-test ags_output_test.c